internal/compiler/testdata/fuzz/crashers/e8db6f1c89822b0c3c56bb0129b8a293809d401e.output
panic: runtime error: invalid memory address or nil pointer dereference
[signal SIGSEGV: segmentation violation code=0x1 addr=0x0 pc=0x53b6b2]

goroutine 1 [running]:
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileExpr(0xc00000c140, 0x0, 0x5a1bc0, 0xc0000100b0, 0x0, 0x0)
	/home/tsatke/code/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:241 +0x52
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileExpr(0xc00000c140, 0xc00007d340, 0x0, 0x203000, 0x203000, 0x203000)
	/home/tsatke/code/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:257 +0x7a8
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileExpr(0xc00000c140, 0xc00007d8c0, 0x448a4f, 0x3, 0x0, 0xc00004eeb8)
	/home/tsatke/code/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:253 +0x680
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileExpr(0xc00000c140, 0xc00007e000, 0x0, 0x2, 0xc0000142a7, 0x0)
	/home/tsatke/code/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:253 +0x680
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileExpr(0xc00000c140, 0xc00007e580, 0x17, 0x16, 0x0, 0x2)
	/home/tsatke/code/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:253 +0x680
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileExpr(0xc00000c140, 0xc00007eb00, 0xc00009a240, 0xc0000e4dc0, 0x1, 0x5a2820)
	/home/tsatke/code/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:253 +0x680
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileExpr(0xc00000c140, 0xc00007f080, 0x11, 0x1, 0x99, 0x5a2820)
	/home/tsatke/code/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:253 +0x680
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileExpr(0xc00000c140, 0xc00007f600, 0xc000025780, 0xc00007f600, 0xc00004f508, 0x505426)
	/home/tsatke/code/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:253 +0x680
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileExpr(0xc00000c140, 0xc00007fb80, 0x506820, 0xc0000100a0, 0xc00007eb00, 0x5a2b20)
	/home/tsatke/code/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:253 +0x680
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileExpr(0xc00000c140, 0xc0000e42c0, 0x5a2b20, 0xc00009a240, 0xc0000e4dc0, 0x1)
	/home/tsatke/code/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:253 +0x680
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileExpr(0xc00000c140, 0xc0000e4840, 0x1, 0x5a2820, 0x5a2820, 0xc000025580)
	/home/tsatke/code/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:253 +0x680
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileExpr(0xc00000c140, 0xc0000e4dc0, 0x5788c0, 0x5a2820, 0xc000025480, 0xc00004faf0)
	/home/tsatke/code/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:253 +0x680
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileResultColumn(0xc00000c140, 0xc00005e180, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x17, 0xc00004fb40)
	/home/tsatke/code/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:228 +0x223
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileSelectCoreSelect(0xc00000c140, 0xc00006e500, 0x40b616, 0xc000025b00, 0x40, 0x38)
	/home/tsatke/code/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:142 +0xf3
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileSelectCore(0xc00000c140, 0xc00006e500, 0x0, 0xc00004fc60, 0x411143, 0xc000025b00)
	/home/tsatke/code/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:117 +0x127
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileSelect(0xc00000c140, 0xc00006c280, 0x0, 0x2, 0xc0000142b3, 0x0)
	/home/tsatke/code/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:70 +0xb6
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileInternal(0xc00000c140, 0xc00006a400, 0x0, 0x2, 0xc0000142b3, 0x0)
	/home/tsatke/code/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:54 +0x7a
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).Compile(0xc00000c140, 0xc00006a400, 0x0, 0x0, 0x0, 0x0)
	/home/tsatke/code/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:34 +0x54
github.com/tomarrell/lbadd/internal/compiler.Fuzz(0x7f8589ab0000, 0x16, 0x16, 0x3)
	/home/tsatke/code/github.com/tomarrell/lbadd/internal/compiler/simple_compiler_fuzzy.go:38 +0x3a4
go-fuzz-dep.Main(0xc00004ff70, 0x1, 0x1)
	go-fuzz-dep/main.go:36 +0x1ad
main.main()
	github.com/tomarrell/lbadd/internal/compiler/go.fuzz.main/main.go:15 +0x52
exit status 2